--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ main {
   font-size: 5em;
   padding: 10px;
   line-height: 88px;
+  border: 1px solid var(--light-cornflower-blue);
 }
 
 .game-buttons:hover {
